# gias3.testing

./: README.rst  inptest.py  lines.py  setup.cfg
src/gias3/testing/: test_inptest.py  test_lines.py
src/gias3/testing/data/: prox_femur_out.inp
