[metadata]
name = gias3.testing
version = attr: gias3.testing.__version__
description = Tests for modules in GIAS3
long_description = file: README.rst, LICENSE.rst
keywords = musculoskeletal, modelling
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
namespace_packages = gias3
package_dir =
    =src
packages = find:
install_requires =
    gias3.common

[options.packages.find]
where = src
